[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://PauseMenu/restartButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://PauseMenu/continueButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://PauseMenu/exitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://PauseMenu/menuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Fonts/Gugi-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="Pause" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseMenu" type="Panel" parent="."]
margin_left = 400.0
margin_top = 150.0
margin_right = 603.0
margin_bottom = 403.0

[node name="pauseLabel" type="Label" parent="pauseMenu"]
margin_left = 51.0
margin_top = 29.0
margin_right = 154.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "PAUSE MENU"

[node name="continueButton" parent="pauseMenu" instance=ExtResource( 3 )]
margin_left = 63.0
margin_top = 79.0
margin_right = 141.0
margin_bottom = 99.0

[node name="restartButton" parent="pauseMenu" instance=ExtResource( 2 )]
margin_left = 36.0
margin_top = 112.0
margin_right = 167.0
margin_bottom = 132.0

[node name="menuButton" parent="pauseMenu" instance=ExtResource( 5 )]
margin_top = 147.0
margin_bottom = 167.0

[node name="exitButton" parent="pauseMenu" instance=ExtResource( 4 )]
margin_left = 44.0
margin_top = 180.0
margin_right = 159.0
margin_bottom = 201.0

[node name="GameCodeLabel" type="Label" parent="."]
margin_left = 301.0
margin_top = 61.0
margin_right = 706.0
margin_bottom = 115.0
custom_colors/font_color = Color( 1, 0.94902, 0, 1 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[connection signal="pressed" from="pauseMenu/continueButton" to="." method="_on_continueButton_pressed"]
[connection signal="pressed" from="pauseMenu/restartButton" to="." method="_on_restartButton_pressed"]
[connection signal="pressed" from="pauseMenu/menuButton" to="." method="_on_menuButton_pressed"]
[connection signal="pressed" from="pauseMenu/exitButton" to="." method="_on_exitButton_pressed"]
